wip: blog astro

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,4 @@
 ---
-
 ---
 
 <html lang="en">
@@ -8,12 +7,13 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Inicio</title>
+		<title>Blog Astro</title>
 	</head>
 	<body>
 		<a href="/">Inicio</a>
 		<a href="/about">Sobre mí</a>
-		<a href="/blog">Blog</a>
-		<h1>Vivo Astro</h1>
+        <a href="/blog">Blog</a>
+        <h1>My Astro Learning Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
 	</body>
 </html>
