--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle= 'Página del blog';
 ---
 
 <html lang="en">
@@ -7,13 +8,18 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<a href="/">Inicio</a>
 		<a href="/about">Sobre mí</a>
         <a href="/blog">Blog</a>
-        <h1>My Astro Learning Blog</h1>
+        <h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
-	</body>
+        <ul>
+            <li><a href="/posts/post-1/">Publicación 1</a></li>
+            <li><a href="/posts/post-2/">Publicación 2</a></li>
+      <li><a href="/posts/post-3/">Publicación 3</a></li>
+          </ul>
+    </body>
 </html>
