--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
-const pageTitle = "Sobre mi";
+import '../styles/globals.css';
+const pageTitle = "Acerca de mi";
 
 const identity = {
   firstName: "Mohamed",
@@ -19,6 +20,9 @@ const skills = [
 const happy = true;
 const finished = false;
 const goal = 3;
+const skillColor= 'navy';
+const fontWeight= 'bold';
+const textCase= 'uppercase';
 ---
 
 <html lang="en">
@@ -28,6 +32,17 @@ const goal = 3;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
     <a href="/">Inicio</a>
@@ -59,7 +74,7 @@ const goal = 3;
     </ul>
     <p>Mis habilidades son:</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class='skill'>{skill}</li>)}
     </ul>
     {happy && <p>¡Estoy feliz de aprender Astro!</p>}
 
